# FateWarScraper

./: .gitignore  .output.txt  LICENSE  README.md  debug_assistance.py  debug_coords.py  debug_preprocess.py  deploy_gh_pages.ps1  find_window.py  history.json  index.html  members.json  members_2026-01-01_23-28-25.csv  members_2026-01-01_23-28-25.html  members_2026-01-01_23-40-44.csv  members_2026-01-01_23-40-44.html  members_2026-01-01_23-46-52.html  members_2026-01-02_00-04-51.html  members_2026-01-02_00-09-05.csv  members_2026-01-02_00-09-05.html  members_2026-01-02_00-09-05.json  members_2026-01-02_00-40-15.html  members_2026-01-02_01-21-21.html  members_2026-01-02_01-52-11.csv  members_2026-01-02_01-52-11.html  members_2026-01-02_02-11-32.csv  members_2026-01-02_02-11-32.html  members_2026-01-02_02-11-32.json  members_2026-01-02_02-34-04.csv  members_2026-01-02_02-34-04.html  members_2026-01-02_02-34-04.json  members_2026-01-02_02-58-51.csv  members_2026-01-02_02-58-51.html  members_2026-01-02_02-58-51.json  members_2026-01-02_03-33-49.csv  members_2026-01-02_03-33-49.html  members_2026-01-02_03-33-49.json  members_2026-01-02_03-42-15.csv  members_2026-01-02_03-42-15.html  members_2026-01-02_03-42-15.json  (+70 more)
docs/ai/: CONTEXT.md  PROMPTS.md  capture.py  preprocess.py
src/fatewarscraper/: __init__.py  __main__.py  capture.py  cli.py  export.py  navigation.py  ocr.py  parse.py  preprocess.py
